--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "symfony/yaml": "6.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-      "ext-curl": "*"
+      "ext-curl": "*",
+      "ext-mysqli": "*"
     },
     "config": {
         "allow-plugins": {
