--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
       "ext-curl": "*",
-      "ext-mysqli": "*"
+      "ext-mysqli": "*",
+      "ext-dom": "*"
     },
     "config": {
         "allow-plugins": {
