--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -8,7 +8,7 @@ when@dev:
       main:
         type: stream
         path: "%kernel.logs_dir%/%kernel.environment%.log"
-        level: error
+        level: debug
         channels: ["!event"]
       # uncomment to get logging in your browser
       # you may have to allow bigger header sizes in your Web server configuration
